plugins {
	id 'java'
	id 'org.springframework.boot' version '4.0.6' apply false
	id 'io.spring.dependency-management' version '1.1.7' apply false
}

subprojects {
	apply plugin: 'java'

	group = 'rolling_restarts'
	version = '0.0.1-SNAPSHOT'

	java {
		toolchain {
			languageVersion = JavaLanguageVersion.of(25)
		}
	}

	repositories {
		mavenCentral()
	}

	dependencies {
		implementation 'org.springframework.boot:spring-boot-starter-validation'
	}

	tasks.named('test') {
		useJUnitPlatform {
			if (project.hasProperty('excludeTags')) {
				excludeTags project.property('excludeTags').split(',')
			}
		}
	}
}
